NPII-74 Adjusted the menu behavior based on the number of links within. Adjusted alignment issues introduced with usa-nav-container.

--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -75,7 +75,15 @@
 				margin-top: 0;
 				padding-top: units(.5);
 				padding-bottom: units(.5);
-				
+
+				&:not(:first-child) {
+					padding-top: 0;
+				}
+
+				&:not(:last-child) {
+					padding-bottom: 0;
+				}
+
 				strong {
 					font-size: size('body', 'lg');
 				}
@@ -156,6 +164,13 @@
 	}
 
 	@include at-media('desktop') {
+		// .usa-nav-container can handle spacing
+		.usa-navbar,
+		.usa-nav__inner {
+			padding-right: 0;
+			padding-left: 0;
+		}
+
 		.grid-col {
 			flex: 1 1 0%; // from uswds - makes them space evenly 
 			width: auto;
@@ -177,7 +192,44 @@
 		.usa-nav__submenu {
 			width: fit-content;
 			min-width: px-to-rem(350px);
-			background-color: color('primary-darkest'); 
+
+			a {
+				width: fit-content;
+			}
+
+			&:has(.grid-col:nth-child(2)) {
+				min-width: px-to-rem(500px);
+			}
+
+			&.usa-megamenu {
+				width: calc(100% + #{units($theme-site-margins-width * 2)});
+				margin-left: -1 * units($theme-site-margins-width);
+
+				.usa-nav__submenu-item { // grid handles horizontal spacing
+					a {
+						padding-right: 0;
+						padding-left: 0;
+					}
+				}
+			}
+		}
+
+		&.usa-header--extended { // stronger selector to override
+			.usa-nav__submenu {
+				&,
+				&:before,
+				&:after {
+					background-color: color('primary-darkest');
+				}
+			}
+
+			.usa-nav__primary {
+				// Offset so that the link text is visually aligned to the edges (link overflows with it's padding)
+				$link-padding: units(2); // set by uswds
+				width: calc(100% + #{$link-padding * 2});
+				margin-right: -1 * $link-padding;
+				// margin-left: -1 * $link-padding; // already set by uswds
+			}
 		}
 
 		.usa-nav {
@@ -288,10 +340,6 @@
 	}
 
 	@include at-media-max('tablet') {
-		.usa-navbar {
-			@include u-padding-left(2);
-		}
-
 		.usa-logo {
 			&__img {
 				picture {
@@ -312,6 +360,12 @@
 					}
 				}
 			}
+		}
+	}
+
+	@include at-media-max('desktop') {
+		.usa-navbar {
+			@include u-padding-left(2);
 		}
 	}
 }
